# toy-fastAPI

./: README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml
common/: auth.py
migrations/: env.py
migrations/versions/: 2025_01_14_0047-74fe76a9f457_add_user_table.py  2025_01_18_1623-d7fb5f758da1_add_user_table.py  2025_01_18_2111-5a060eac154c_add_user_table.py
user/application/: user_service.py
user/domain/repository/: user_repo.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
