[tool.poetry]
name = "toy-fastapi"
version = "0.1.0"
description = "toy project by Dominic"
authors = ["keepinmind <pjwzzang190@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
unicorn = "^2.1.1"
py-ulid = "^1.0.3"
passlib = "1.7.4"
pydantic-settings = "^2.7.1"
mysqlclient = "^2.2.7"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
bcrypt = "3.2.2"
dependency-injector = "^4.45.0"
pydantic = {extras = ["email"], version = "^2.10.5"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
